# Research

./: .gitignore  scientist-ai-summary.md
code/rust/: COMPARISON.md  Cargo.toml  FINAL_COMPARISON.md  NUMERAI_PREDICTIONS.md  VALIDATED_RESULTS.md  WINE_PREDICTIONS.md
code/rust/src/: lib.rs  (+3 more)
code/scientist_ai/: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml  test.toml
scientist_ai/: Cargo.toml  README.md  analyze_exp1.py  analyze_exp1_secom.py  analyze_exp1_secom6.py  analyze_single_era.py  download_numerai.py  merge_all_eras.py  prepare_window_test.py  pyproject.toml  run_diagnostic.sh  run_exp1.sh  run_exp1_secom.sh  run_exp1_secom6.sh  run_iris_10x.sh  test_temporal_stability.py  test_window_sizes.py
scientist_ai/data/: chain_3var.csv  chain_large.csv  chain_test.csv  iris_numeric.csv  secom_4var.csv  secom_6var.csv  secom_6var_alt.csv
scientist_ai/experiments/: example1_single_method.toml  example4_legacy.toml  exhaustive_python.py  exp1_iris4var_beam.toml  exp1_secom4var_beam.toml  exp1_secom6var_beam.toml  generate_chain_data.py  iris_beam_search.toml  numerai_10features.toml  numerai_overlap_features.txt  numerai_single_era.toml  numerai_small.toml  numerai_stable_features_3eras.txt  numerai_top785_features.txt  numerai_top785_features_era0100.txt  numerai_top785_features_era0400.txt  reduced_feature_set_596.txt  temporal_stability_analysis.csv  test_alt_secom6.toml  test_chain.toml  test_iris5var.toml  window_size_analysis.csv  window_test.toml
scientist_ai/src/: dag.rs  inference.rs  lib.rs  main.rs
scientist_ai/tests/: debug_iris_types.rs
(+142 files in other folders)
