[package]
name = "scientist_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
polars = { version = "0.45", features = ["lazy", "csv", "parquet"] }
itertools = "0.13"
statrs = "0.17"  # For Gamma function in BDeu scoring
rand = "0.8"  # For stochastic sampling in search algorithm
rayon = "1.10"  # For parallel structure scoring
nalgebra = "0.33"  # For linear algebra (regression on heap)
