[package]
name = "scientist_ai_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16"
ndarray-linalg = { version = "0.17", features = ["openblas-system"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.13"

[[bin]]
name = "debug"
path = "src/debug.rs"

[[bin]]
name = "wine_benchmark"
path = "src/wine_benchmark.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
